# A_Global_Affordability_Overview_2017_2024_review

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  review.txt  setup.py
.github/workflows/: ci.yml  data_pipeline.yml  docker.yml
deployment/: deployment.yaml  ingress.yaml  service.yaml
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
notebooks/: a-global-affordability-overview-2017-2024.ipynb  data_gestion.ipynb
src/: analysis.py  app.py  db.py  plots.py
src/.streamlit/: config.toml
src/app/: app.py  helpers.py  style.css
src/data/: data_preprocessing.py  data_preprocessing_refactoring.py  data_test.py  db.py  ingest_data.py  price_of_healthy_diet_clean.csv  utils.py
src/features/: analysis.py  build_features.py  constants.py  dashboard_presets.py  helpers.py  plots.py
tests/: conftest.py  test_analysis.py  test_app_helpers.py  test_dashboard_presets.py  test_db.py  test_features_helpers.py  test_plots.py
