[project]
name = "a_global_affordability_overview_2017_2024"
version = "0.1.0"
description = 'This MLOps project operationalizes a Kaggle machine learning notebook [A Global Affordability Overview (2017–2024)](https://www.kaggle.com/code/hassanjameelahmed/a-global-affordability-overview-2017-2024) using Argo Workflows for production deployment'
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb",
    "flake8",
    "kagglehub>=1.0.0",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "python-dotenv>=0.5.1",
    "pyyaml",
    "ruff",
    "scikit-learn",
    "streamlit>=1.56.0",
]
