[project]
name = "a_global_affordability_overview_2017_2024"
version = "0.1.0"
description = "MLOps deployment of Kaggle notebook using Argo Workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "kagglehub>=1.0.0",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "pylint>=4.0.5",
    "python-dotenv>=0.5.1",
    "pyyaml",
    "scikit-learn",
    "seaborn>=0.13.2",
    "streamlit>=1.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["D203"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = true
dev-dependencies = ["ruff>=0.5.0", "pre-commit>=3.7.0"]

[tool.pytest.ini_options]
# Pytest reads this section; run tests with: pytest  or  uv run pytest
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-ra", "-q"]

[project.scripts]
diet-dashboard = "src.app:main"
